# caide

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CREDITS.md  README.md
libcaide/: .gitignore  .hlint.yaml  .project  INSTALL.txt  LICENSE  README.md  Setup.hs  cabal.config  cabal.project  cabal.project.freeze  caide.cabal  deps.py  ghc-linker.py  libcaide.cabal  linux-cabal.project  linux-cabal.project.freeze  mingw32.sh  msys-env.bat  msys-env.sh  run-tests.bat  setup-env.bat  setup-test-env.sh  windows-cabal.project  windows-cabal.project.freeze
libcaide/app/: Main.hs
libcaide/cbits/: Makefile  RemoveInactivePreprocessorBlocks.cpp  RemoveInactivePreprocessorBlocks.h  SmartRewriter.cpp  SmartRewriter.h  StmtParentMap.cpp  StmtParentMap.h  cmd.cpp  configure-debug.sh  cwrapper.c  cwrapper.cpp  cwrapper.h  dump-ast.sh  eol.h  inliner.cpp  inliner.h  optimizer.cpp  optimizer.h  util.cpp  util.h
libcaide/cbits/clang-patch/: DynamicLibrary.inc
libcaide/doc/: haskell-style-guide.md  intro.txt
libcaide/doc/dev/: intro.txt  universal-executable-build.asciidoc
libcaide/doc/dev/universal-executable-build/: MD5SUMS  README.md  fstab  guest.sh  host.sh  schroot.conf
libcaide/doc/samples/: cpp-builder.sh  cs-builder.sh  debug.sh  samples.md
libcaide/doc/samples/cstyle-io-98/: main_template.cpp  solution_template.cpp  test_template.cpp
libcaide/lang/cpp/: test_template.cpp
libcaide/regression-tests/: builders.test  cf-contest.test  chef-contest.test  clean.test  codechef.test  codeforces.test  cpp-inliner.test  csharp.test  init.test  inliner-stl.test  inliner1.test  inliner2.test  poj.test  problem_type.test  rcc.test  run-tests.sh  simplecpp.test  space-in-exe-path.test  system-headers.test  test-functions.sh  timus.test  whitespace-in-search-path.test
libcaide/regression-tests/builders/init/: caide.ini
libcaide/regression-tests/clean/after-update-tests/: caide.ini  submission.cpp
libcaide/regression-tests/codeforces/init/: caide.ini
libcaide/regression-tests/codelite/archive-prob1/: caide.workspace
libcaide/regression-tests/codelite/checkout-prob1/: caide.workspace
libcaide/regression-tests/codelite/create-prob1/: caide.workspace
libcaide/regression-tests/codelite/create-prob2/: caide.workspace
libcaide/regression-tests/codelite/init/: caide.ini
libcaide/regression-tests/cpp-inliner/after-make/: caide.ini
libcaide/regression-tests/cpp-inliner/init/: caide.ini
libcaide/regression-tests/inliner-delayed-parsing/inlined/: submission.cpp
libcaide/regression-tests/inliner1/init/: caide.ini
libcaide/regression-tests/inliner1/inlined/: submission.cpp
libcaide/regression-tests/inliner2/inlined/: submission.cpp
libcaide/res/init/cpplib/: README.txt  dummy.cpp  example.h
libcaide/res/init/include/: versions.txt
libcaide/res/init/templates/: solution_template.cpp  test_template.cpp  test_template.cs  topcoder_solution_template.cpp  vs2012_template.vcxproj
libcaide/res/templates/: dcj_solution_template.cpp  dcj_test_template.cpp  main_template.cpp  main_template.cs  message.h  test_template.cpp  test_template.cs  test_util.h  topcoder_serialize.h  topcoder_solution_template.cpp  topcoder_solution_template.cs  vs_common.props
libcaide/src/: Main.hs
libcaide/src/Caide/: CaideMain.hs  CheckUpdates.hs  CodeforcesCookie.hs  Commands.hs  Configuration.hs  ConventionalBuilder.hs  CustomBuilder.hs  DCJ.hs  GenericLanguage.hs  GlobalState.hs  GlobalTemplate.hs  HttpClient.hs  Logger.hs  Monad.hs  MustacheUtil.hs  Paths.hs  Problem.hs  Registry.hs  Settings.hs  Templates.hs  TestCases.hs  TestResultsProcessor.hs  Types.hs  Util.hs  Xml.hs
libcaide/src/Caide/Builders/: Custom.hs  None.hs
libcaide/src/Caide/CPP/: CBinding.hs  CPP.hs  CPPSimple.hs  class_tester.h.mustache  class_tester_impl.h.mustache  cpptype.mustache  custom_checker.h.mustache  leetcode_predefined.h  main.cpp.mustache  solution.cpp.mustache  tester.cpp.mustache  typeinit.mustache
libcaide/src/Caide/CSharp/: CSharpSimple.hs  cstype.mustache  main.cs.mustache  serializer.mustache  solution.cs.mustache  tester.cs.mustache
libcaide/src/Caide/Codeforces/: Parser.hs
libcaide/src/Caide/Commands/: Archive.hs  BuildScaffold.hs  CHelperHttpServer.hs  Checkout.hs  ConvertTestCase.hs  FirefoxServer.hs  GetOpt.hs  Init.hs  Make.hs  ParseContest.hs  ParseProblem.hs  RunTests.hs
libcaide/src/Caide/Features/: Codelite.hs  VisualStudio.hs
libcaide/src/Caide/Parsers/: CodeChef.hs  CodeChefContest.hs  Codeforces.hs  CodeforcesContest.hs  Common.hs  GCJ.hs  HackerRank.hs  LeetCode.hs  LeetCodeContest.hs  POJ.hs  RCC.hs  RccContest.hs  Timus.hs  Yandex.hs
libcaide/src/Caide/TestCases/: TopcoderComparator.hs  TopcoderDeserializer.hs  Types.hs
libcaide/src/Caide/Types/: Builder.hs  Option.hs  ProgrammingLanguage.hs
libcaide/src/Control/Exception/: Extended.hs
libcaide/src/Control/Monad/: Extended.hs  Util.hs
libcaide/src/Data/: TypeNat.hs  VecN.hs
libcaide/src/Data/Either/: Util.hs
libcaide/src/Data/List/: Util.hs
libcaide/src/Filesystem/: Util.hs
libcaide/src/Network/HTTP/: Util.hs
libcaide/templates/: codelite_project_template.project  solution_template.cpp  test_template.cpp  vs2013_template.vcxproj
libcaide/test/: Main.hs  ProblemParsers.hs
libcaide/tests/: archive-last-problem.test  builders.test  cf-contest.test  chef-contest.test  chelper.test  clean.test  clean.test.disabled  codechef.test  codechef.test.disabled  codeforces-contest.test  codeforces.test  codelite.test  companion.test  cpp.test  csharp.test  custom-lang.test  dcj.test  ffserver.test  global-templates.test  hackerrank.test  hackerrank.test.disabled  init-without-gcc.test  inliner-stl.test  inliner3.test  leetcode-contest.test  options.test  parse-from-file.test  poj.test  problem-options.test  problem_type.test  rcc-contest.test  rcc-contest.test.disabled  rcc.test  render.js  run-tests.sh  simplecpp.test  space-in-exe-path.test  system-headers.test  test-functions.sh  timus.test  (+4 more)
libcaide/tests/_basic_init/: caide.ini
libcaide/tools/: cfapi.py
(+434 files in other folders)
