name:           caide
version:        0.1
cabal-version:  >=1.10
build-type:     Simple
author:         slycelote
license:        BSD3

executable caide
  build-depends:   
                   base >= 4,
                   bytestring >= 0.10.4.0,
                   ConfigFile >= 1.1,
                   HTTP >= 4000.2.11,
                   mtl >= 2.1,
                   network >= 2.4.2.2,
                   process >=1.2.0,
                   system-fileio >= 0.3.12,
                   system-filepath >= 0.4.9,
                   tagsoup >= 0.13,
                   text >= 1.1.0,
                   xml >= 1.3
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  default-language: Haskell2010
  main-is:         Main.hs
  other-modules:   
                   Caide.Types,
                   Caide.Codeforces.Parser,
                   Caide.Util,
                   Caide.CPP.CPPSimple,
                   Caide.Commands.Init,
                   Caide.Commands.ParseProblem,
                   Caide.Configuration,
                   Caide.Commands.BuildScaffold,
                   Caide.Registry,
                   Caide.Commands.Checkout,
                   Caide.Commands.Make,
                   Caide.Commands.RunTests,
                   Caide.Builders.None,
                   Caide.Builders.Custom,
                   Caide.Features.Codelite,
                   Caide.Xml
