name:           libcaide
version:        2.3.0
cabal-version:  >= 1.14
build-type:     Custom
license:        GPL-3
license-file:   LICENSE
author:         slycelote
maintainer:     slycelot@yandex.ru
synopsis:       Automate certain common tasks that you do during programming competitions.
category:       Application
homepage:       https://github.com/slycelote/caide
bug-reports:    https://github.com/slycelote/caide/issues
description:
    Automates certain common tasks that you do during programming competitions:
    parsing, running and debugging problem tests, inlining library code.
tested-with:    GHC == 8.0.1

source-repository head
  type:         git
  location:     https://github.com/slycelote/caide

Flag cppinliner
  description: Include support for inlining C++ code via libclang
  default: True

Flag debug
  description: Debug build
  default: False

executable caide
  -- Due to a cabal bug, linking custom Setup.hs fails when local version
  -- of unix package doesn't match ghc version. Older unix version in GHC 7.8
  -- forces us to use an older version of time package.
  if impl(ghc < 7.10) {
    build-depends:
                   base >= 4.7 && < 4.8,
                   old-locale,
                   time < 1.5
  } else {
    build-depends:
                   base >= 4.8 && < 6,
                   time >= 1.5.0.1
    -- Functor-Applicative-Monad proposal
    cpp-options:   -DAMP
  }

  build-depends:
                   aeson,
                   array,
                   async >= 2.0.1,
                   bytestring,
                   ConfigFile,
                   connection,
                   containers >= 0.5.0.0,
                   directory,
                   file-embed,
                   filelock,
                   filepath,
                   http-client >= 0.4 && < 0.5,
                   http-client-tls,
                   http-types >= 0.9,
                   httpd-shed,
                   mtl >= 2.2.1,
                   network >= 2.6,
                   network-uri >= 2.6,
                   optparse-applicative,
                   parsec,
                   process,
                   system-fileio >= 0.3.16,
                   system-filepath,
                   tagsoup >= 0.13,
                   text >= 1.1.0,
                   xml,
                   zip-archive
  other-extensions: CPP
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts=all -static -pgml g++
  if os(windows) {
    ghc-options:   -optl-static
  } else {
    ghc-options:   -optl-pthread
  }
  if flag(debug) {
    -- run as cabal configure -fdebug --ghc-option=-debug -O0
    ghc-options:   -fprof-auto
  }
  if flag(cppinliner) {
    cpp-options:     -DCLANG_INLINER
    include-dirs:    cbits
    c-sources:       cbits/cwrapper.c

    if os(windows) {
      extra-libraries: imagehlp ole32 uuid version
    }
    extra-lib-dirs: cbits/build cbits/build/llvm/lib
  }
  default-language: Haskell2010
  main-is:         Main.hs

