cabal-version:  2.2.0
name:           libcaide
version:        2.5.0
build-type:     Custom
license:        GPL-3.0-or-later
license-file:   LICENSE
author:         slycelote
maintainer:     slycelot@yandex.ru
synopsis:       Automate certain common tasks that you do during programming competitions.
category:       Application
homepage:       https://github.com/slycelote/caide
bug-reports:    https://github.com/slycelote/caide/issues
description:
    Automates certain common tasks that you do during programming competitions:
    parsing, running and debugging problem tests, inlining library code.
tested-with:    GHC == 8.10.1

source-repository head
  type:         git
  location:     https://github.com/slycelote/caide

Flag cppinliner
  description: Include support for inlining C++ code via libclang
  default: True

Flag debug
  description: Debug build
  default: False


custom-setup
  setup-depends: base >= 4.7,
                 bytestring,
                 Cabal >= 3.2,
                 directory >= 1.2.3,
                 filepath,
                 zip-archive

executable caide
  -- Due to a cabal bug, linking custom Setup.hs fails when local version
  -- of unix package doesn't match ghc version. Older unix version in GHC 7.8
  -- forces us to use an older version of time package.
  if impl(ghc < 7.10) {
    build-depends:
                   base >= 4.7 && < 4.8,
                   old-locale,
                   time < 1.5
  } else {
    build-depends:
                   base >= 4.8,
                   time >= 1.5.0.1
    -- Functor-Applicative-Monad proposal
    cpp-options:   -DAMP
  }

  build-depends:
                   aeson,
                   array,
                   async >= 2.0.1,
                   bytestring,
                   ConfigFile,
                   connection,
                   containers >= 0.5.0.0,
                   directory,
                   file-embed,
                   filelock,
                   filepath,
                   http-client >= 0.5,
                   http-client-tls,
                   http-types >= 0.9,
                   httpd-shed,
                   microstache,
                   mtl >= 2.2.1,
                   network >= 2.6,
                   network-uri >= 2.6,
                   optparse-applicative >= 0.15,
                   parsec,
                   process,
                   system-fileio >= 0.3.16,
                   system-filepath,
                   tagsoup >= 0.13,
                   text >= 1.1.0,
                   unordered-containers,
                   vector,
                   xml,
                   zip-archive
  other-extensions: CPP
  hs-source-dirs:  src
  ghc-options:     -Wall -static -pgml g++ -threaded -rtsopts=all -with-rtsopts=-N
  if os(windows) {
    ghc-options:   -optl-static
  } else {
    ghc-options:   -optl-pthread
  }
  if flag(debug) {
    -- run as cabal configure -fdebug --ghc-option=-debug -O0
    ghc-options:   -fprof-auto
  }
  if flag(cppinliner) {
    cpp-options:     -DCLANG_INLINER
    include-dirs:    cbits
    c-sources:       cbits/cwrapper.c

    if os(windows) {
      extra-libraries: imagehlp ole32 uuid version
    }
  }
  default-language: Haskell2010
  main-is:         Main.hs
  autogen-modules: Paths_CaideExt
  other-modules:
        Caide.Builders.Custom
        Caide.Builders.None
        Caide.CheckUpdates
        Caide.CPP.CBinding
        Caide.CPP.CPP
        Caide.CPP.CPPSimple
        Caide.CSharp.CSharpSimple
        Caide.Commands
        Caide.Commands.Archive
        Caide.Commands.BuildScaffold
        Caide.Commands.CHelperHttpServer
        Caide.Commands.Checkout
        Caide.Commands.GetOpt
        Caide.Commands.Init
        Caide.Commands.Make
        Caide.Commands.ParseContest
        Caide.Commands.ParseProblem
        Caide.Commands.RunTests
        Caide.Configuration
        Caide.CustomBuilder
        Caide.Features.Codelite
        Caide.GenericLanguage
        Caide.GlobalState
        Caide.GlobalTemplate
        Caide.Logger
        Caide.MustacheUtil
        Caide.Parsers.CodeChef
        Caide.Parsers.CodeChefContest
        Caide.Parsers.Codeforces
        Caide.Parsers.CodeforcesContest
        Caide.Parsers.Common
        Caide.Parsers.GCJ
        Caide.Parsers.HackerRank
        Caide.Parsers.POJ
        Caide.Parsers.RCC
        Caide.Parsers.RccContest
        Caide.Parsers.Timus
        Caide.Parsers.Yandex
        Caide.Paths
        Caide.Problem
        Caide.Registry
        Caide.Templates
        Caide.TestCases
        Caide.TestCases.TopcoderComparator
        Caide.TestCases.TopcoderDeserializer
        Caide.TestCases.Types
        Caide.Types
        Caide.Util
        Caide.Xml
        Data.Text.Encoding.Util
        Data.Text.IO.Util
        Filesystem.Util
        Network.HTTP.Util
        Paths_CaideExt
        Paths_libcaide
        System.IO.Util
        Text.HTML.TagSoup.Utils

